# Speech-Recognition-System-of-Spoken-Digits

./: .gitignore  1.txt  README.md  TODO  tags
doxy/: doc.config
doxy/html/: _a_e_p_analysis_8cpp.html  _a_e_p_analysis_8h.html  _a_e_p_analysis_8h_source.html  _auto_capture_8cpp.html  _auto_capture_8h.html  _auto_capture_8h_source.html  _b_e_p_analysis_8cpp.html  _b_e_p_analysis_8h.html  _b_e_p_analysis_8h_source.html  _capture_8cpp.html  _capture_8h.html  _capture_8h_source.html  _d_a_e_p_analysis_8cpp.html  _d_a_e_p_analysis_8h.html  _d_a_e_p_analysis_8h_source.html  _dummy_state_8h.html  _dummy_state_8h_source.html  _e_p_analysis_8cpp.html  _e_p_analysis_8h.html  _e_p_analysis_8h_source.html  _edit_distance_2app_8cpp.html  _edit_distance_2app_8h.html  _edit_distance_2app_8h_source.html  _feature_8cpp.html  _feature_8h.html  _feature_8h_source.html  _feature_extractor_8cpp.html  _feature_extractor_8h.html  _feature_extractor_8h_source.html  _gaussian_8cpp.html  _gaussian_8h.html  _gaussian_8h_source.html  _h_m_m_automaton_8cpp.html  _h_m_m_automaton_8h.html  _h_m_m_automaton_8h_source.html  _h_m_m_automaton_set_8cpp.html  _h_m_m_automaton_set_8h.html  _h_m_m_automaton_set_8h_source.html  _h_m_m_k_mean_automaton_8h.html  _h_m_m_k_mean_automaton_8h_source.html  (+442 more)
doxy/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+118 more)
doxy/latex/: _a_e_p_analysis_8cpp.tex  _a_e_p_analysis_8h.tex  _auto_capture_8cpp.tex  _auto_capture_8h.tex  _b_e_p_analysis_8cpp.tex  _b_e_p_analysis_8h.tex  _capture_8cpp.tex  _capture_8h.tex  _d_a_e_p_analysis_8cpp.tex  _d_a_e_p_analysis_8h.tex  _dummy_state_8h.tex  _e_p_analysis_8cpp.tex  _e_p_analysis_8h.tex  _edit_distance_2app_8cpp.tex  _edit_distance_2app_8h.tex  _feature_8cpp.tex  _feature_8h.tex  _feature_extractor_8cpp.tex  _feature_extractor_8h.tex  _gaussian_8cpp.tex  _gaussian_8h.tex  _h_m_m_automaton_8cpp.tex  _h_m_m_automaton_8h.tex  _h_m_m_automaton_set_8cpp.tex  _h_m_m_automaton_set_8h.tex  _h_m_m_k_mean_automaton_8h.tex  _h_m_m_kmean_automaton_8cpp.tex  _h_m_m_recognition_8cpp.tex  _h_m_m_recognition_8h.tex  _h_m_m_seq_k_mean_trainer_8cpp.tex  _h_m_m_seq_k_mean_trainer_8h.tex  _h_m_m_seq_recognition_8cpp.tex  _h_m_m_seq_recognition_8h.tex  _h_m_m_seq_trainer_8cpp.tex  _h_m_m_seq_trainer_8h.tex  _h_m_m_soft_automaton_8cpp.tex  _h_m_m_soft_automaton_8h.tex  _h_m_m_state_8cpp.tex  _h_m_m_state_8h.tex  _k_mean_state_8cpp.tex  (+195 more)
src/: .CMakeLists.txt.swp  .pro2_demo.cpp.swp  .pro5_demo.cpp.swm  .pro5_demo.cpp.swn  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.orig  Makefile  PRO4_DEMO.md  cmake_install.cmake  hmm_demo.cpp  hmm_demo.cpp.orig  main.cpp  pro2_demo.cpp  pro3_demo  pro3_demo.cpp  pro4_demo.cpp  pro4_demo_1.cpp  pro5_demo.cpp  pro6_demo.cpp  rawdtw.cpp  recorder.cpp  rundot.sh  seqdot.sh  string_demo.cpp  tags
src/Analysis/: EPAnalysis.cpp  EPAnalysis.h  Makefile  cmake_install.cmake
src/Capture/: Capture.h  Makefile  cmake_install.cmake
src/Configure/: .configure_basic.h.swp  .configure_feature.h.swo  .configure_feature.h.swp  .tool.h.swp  CMakeLists.txt  ErrorCode.def  Makefile  SerialFiles.cpp  SerialFiles.h  SpecificStateNum.def  cmake_install.cmake  configure.h  configure_basic.h  configure_dtw.h  configure_feature.h  configure_hmm.h  srs.h  tool.cpp  tool.h
src/EditDistance/: CMakeLists.txt  Makefile  app.cpp  app.h  calcDist.cpp  calcDist.h  cmake_install.cmake  conf.cpp  conf.h  path.h  stringtool.cpp  stringtool.h
src/EditDistance/tmp/: container.h  containerset.h  stringtool.h  wordcontainer.h  wordset.h
src/Feature/: .FeatureExtractor.cpp.swp  .FeatureExtractor.h.swp  .mathtool.cpp.swp  CMakeLists.txt  DummyState.h  Feature.cpp  Feature.h  FeatureExtractor.cpp  FeatureExtractor.cu  FeatureExtractor.h  FeatureExtractorTool.cu  FeatureExtractorTool.h  Gaussian.cpp  Gaussian.h  HMMAutomaton.cpp  HMMAutomaton.h  HMMAutomatonSet.cpp  HMMAutomatonSet.h  HMMKMeanAutomaton.h  HMMKmeanAutomaton.cpp  HMMRecognition.cpp  HMMRecognition.h  HMMSeqKMeanTrainer.cpp  HMMSeqKMeanTrainer.h  HMMSeqRecognition.cpp  HMMSeqRecognition.h  HMMSeqTrainer.cpp  HMMSeqTrainer.h  HMMSoftAutomaton.cpp  HMMSoftAutomaton.h  HMMState.cpp  HMMState.h  KMeanState.cpp  KMeanState.cpp.orig  KMeanState.h  KMeanState.h.orig  Makefile  NoEmitState.cpp  NoEmitState.h  SeqModel.cpp  (+14 more)
src/Graph/: CMakeLists.txt  graphParas.def  parseGraph.cpp  parseGraph.h  phone_number.graph  unrestricted.graph  unrestricted_oh.graph
src/LexTree/: CMakeLists.txt  LexTree.cpp  LexTree.h  app.cpp  app.h  spellcheck.cpp  spellcheck.h  spellcheck_t.h
src/MString/: CMakeLists.txt  StringMatch.cpp  StringMatch.h  stringtool.cpp  stringtool.h
src/Matlab/: .matrix_file_read.m.swp  matrix_file_read.m  riffRead.m  vec_file_read.m
src/Matlab/rastamat/: .audspec.m.swp  .fft2melmx.m.swo  .fft2melmx.m.swp  .melfcc_demo.m.swp  .powspec.m.swp  audspec.m  bordertext.m  melfcc.m  melfcc_demo.m  powspec.m  tags
src/ThreadPool/: Makefile  ThreadPool.cpp  ThreadPool.h  cmake_install.cmake
src/data/: Makefile  RawData.cpp  cmake_install.cmake
src/readwave/: Makefile  cmake_install.cmake
src/test/: Makefile  cmake_install.cmake  test.cpp  test.h
