cmake_minimum_required (VERSION 2.6)
project (Speech)

#set (PRO2_MAIN pro2_demo)
#add_executable(${PRO2_MAIN} pro2_demo.cpp)

set (PRO3_MAIN pro3_demo)
add_executable(${PRO3_MAIN} pro3_demo.cpp)

#set(ANALYSIS Analysis)
#set(CAPTURE Capture)
#set(FEATURE Feature)
#set(TEST test)
set(CONFIGURE Configure)
#set(READWAVE readwave)
#set(DATA data)
set(THREADPOOL ThreadPool)
set(EDITDISTANCE EditDistance)

#include_directories ("${PROJECT_SOURCE_DIR}/${ANALYSIS}")
#include_directories ("${PROJECT_SOURCE_DIR}/${CAPTURE}")
#include_directories ("${PROJECT_SOURCE_DIR}/${FEATURE}")
#include_directories ("${PROJECT_SOURCE_DIR}/${TEST}")
include_directories ("${PROJECT_SOURCE_DIR}/${CONFIGURE}")
#include_directories ("${PROJECT_SOURCE_DIR}/${READWAVE}")
#include_directories ("${PROJECT_SOURCE_DIR}/${DATA}")
include_directories ("${PROJECT_SOURCE_DIR}/${THREADPOOL}")
include_directories ("${PROJECT_SOURCE_DIR}/${EDITDISTANCE}")

#add_subdirectory (${ANALYSIS})
#add_subdirectory (${CAPTURE})
#add_subdirectory (${FEATURE})
#add_subdirectory (${TEST})
add_subdirectory (${CONFIGURE})
#add_subdirectory (${READWAVE})
#add_subdirectory (${DATA})
add_subdirectory (${THREADPOOL})
add_subdirectory (${EDITDISTANCE})

#target_link_libraries(${PRO2_MAIN} ${ANALYSIS})
#target_link_libraries(${PRO2_MAIN} ${CAPTURE})
#target_link_libraries(${PRO2_MAIN} ${FEATURE})
#target_link_libraries(${PRO2_MAIN} ${TEST})
target_link_libraries(${PRO2_MAIN} ${CONFIGURE})
#target_link_libraries(${PRO2_MAIN} ${READWAVE})
#target_link_libraries(${PRO2_MAIN} ${DATA})
target_link_libraries(${PRO2_MAIN} ${THREADPOOL})
target_link_libraries(${PRO2_MAIN} ${EDITDISTANCE})
#target_link_libraries(${PRO2_MAIN} portaudio)


#target_link_libraries(${PRO3_MAIN} ${ANALYSIS})
#target_link_libraries(${PRO3_MAIN} ${CAPTURE})
#target_link_libraries(${PRO3_MAIN} ${FEATURE})
#target_link_libraries(${PRO3_MAIN} ${TEST})
target_link_libraries(${PRO3_MAIN} ${CONFIGURE})
#target_link_libraries(${PRO3_MAIN} ${READWAVE})
#target_link_libraries(${PRO3_MAIN} ${DATA})
target_link_libraries(${PRO3_MAIN} ${THREADPOOL})
target_link_libraries(${PRO3_MAIN} ${EDITDISTANCE})
#target_link_libraries(${PRO3_MAIN} portaudio)
